<resources>
    <string name="app_name">FinalHomeWork</string>
    <string name="_225_central_park_west_ny_10024_usa">225 Central Park West, NY 10024, USA</string>
    <string name="_225_central_park_west_ny_10024">225 Central Park West, NY 10024, USA</string>
    <string name="delivery">DELIVERY</string>
    <string name="_225_central_park_west_ny_1002">225 Central Park West, NY 10024, USA</string>
    <string name="deliveryd">DELIVERY</string>
    <string name="dede">DELIVERY</string>
    <string name="pickup">Pickup</string>
    <string name="find_store_by_name">Find store by name</string>
    <string name="takeaways">Takeaways</string>
    <string name="takeaway">Takeaways</string>
    <string name="grocery">Grocery</string>
    <string name="convenience">Convenience</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="_58_stores_open">58 stores Open</string>
    <string name="burger_craze">Burger Craze</string>
    <string name="open">OPEN</string>
    <string name="_1_5_km_away">1.5 km away</string>
    <string name="_4_6">4.6</string>
    <string name="_601">(601)</string>
    <string name="american_burgers">American • Burgers</string>
    <string name="delivery_free">Delivery: FREE</string>
    <string name="delivery_free_minimum_10">Delivery: FREE • Minimum: $10</string>
    <string name="dw">Delivery: FREE • Minimum: $10</string>
    <string name="menu">Menu</string>
    <string name="search_product_by_name">Search product by name</string>
    <string name="around">around</string>
    <string name="_30_minutes">30 minutes</string>
    <string name="vegetarian_pizza">Vegetarian Pizza</string>
    <string name="_4_6_">4.6</string>
    <string name="italian_burgers">Italian•Burgers</string>
    <string name="more_info">More info</string>
</resources>