<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:background="@color/mainMenuHeader"
        android:layout_height="60dp">

        <ImageView
            android:id="@+id/geo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/group"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

        <TextView
            android:id="@+id/text_geo"
            app:layout_constraintStart_toEndOf="@+id/geo"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/regular_sans"
            android:layout_marginStart="10dp"
            android:textColor="@color/textHeaderGeo"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="18sp"
            android:text="@string/_225_central_park_west_ny_1002"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <ImageView
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_geo"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/chevron_down"
            android:layout_width="25dp"
            android:layout_height="25dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/menu"
        app:layout_constraintTop_toBottomOf="@+id/header"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:src="@drawable/menu"
            android:layout_marginStart="15dp"
            android:layout_width="100dp"
            android:layout_height="50dp"/>

        <ImageView
            android:layout_gravity="center"
            android:background="@color/white"
            android:src="@drawable/menu_1"
            android:layout_width="100dp"
            android:layout_height="40dp"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_gravity="center"
            android:src="@drawable/text2"
            android:layout_height="40dp"/>

        <ImageView
            android:layout_marginStart="5dp"
            android:src="@drawable/text3"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="40dp"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/mainMenuHeader"
        app:layout_constraintTop_toBottomOf="@+id/menu"
        android:layout_height="40dp">

        <ImageView
            android:id="@+id/nav_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/search"
            android:layout_width="20dp"
            android:layout_height="20dp"/>

        <EditText
            android:id="@+id/nav_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:background="@null"
            android:fontFamily="@font/regular_sans"
            android:text="@string/find_store_by_name"
            android:textColor="@color/text2"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nav_image"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/options"
            android:layout_width="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_height="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCategory"
        app:layout_constraintTop_toBottomOf="@+id/search"
        android:layout_width="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        tools:listitem="@layout/category"
        android:layout_marginTop="24dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/stores_open"
        android:layout_marginStart="15dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewCategory"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/_58_stores_open"
        android:textColor="@color/text4"
        android:fontFamily="@font/regular_sans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewFoods"
        android:layout_width="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stores_open"
        tools:listitem="@layout/item_foods"
        android:layout_height="0dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/navigation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/mainMenuHeader"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/action"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <ImageView
            android:id="@+id/search_menu"
            app:layout_constraintStart_toEndOf="@id/home"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/action1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <ImageView
            android:id="@+id/orders"
            app:layout_constraintStart_toEndOf="@+id/search_menu"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/action2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            app:layout_constraintStart_toEndOf="@+id/orders"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/actions3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>